working on animated tiles

--- a/help.html
+++ b/help.html
@@ -110,7 +110,7 @@
             </p>
             <div id="smart-rock-example" style="display:none;">
                 <p><br>Smart rock example</p><br>
-                <img src="help/smart-rock-example.png" alt="smart rock example" title="smart rock example" onerror="document.body.style.display='none';">
+                <img src="help/smart-rock-example.png" alt="smart rock example" title="smart rock example">
             </div>
 
         <div class="line"></div>
